<resources>
    <string name="app_name">arXiv</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_to_exit">Are you sure you want to exit from the app?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="search_in">Search In</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="subject_category">Subject Category</string>
    <string name="journal_reference">Journal Reference</string>
    <string name="comment">Comment</string>
    <string name="author">Author</string>
    <string name="text_abstract">Abstract</string>
    <string name="title">Title</string>
    <string name="everywhere">Everywhere</string>
    <string name="custom">Custom</string>
    <string name="please_wait">Please Wait</string>
</resources>